# ForgeCC

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: permission_request.py  post_tool_use.py  post_tool_use_failure.py  pre_tool_use.py  security_common.py  user_prompt_submit.py
benchmarks/coding_agent/: README.md  run_benchmark.py
benchmarks/coding_agent/cases/: swe_verified_latency_token_12.jsonl
benchmarks/coding_agent/results/: results.jsonl
benchmarks/context_memory/: README.md  clone_swe_verified_repos.py  run_context_benchmark.py
benchmarks/context_memory/cases/: swe_verified_front8_context_8.jsonl
benchmarks/context_memory/results/: compression.jsonl  no_compression.jsonl
benchmarks/security/: generate_deepseek_cases.py
benchmarks/security/benchmarks/security/: high_risk_cases.generated.jsonl
src/mini_coding_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  hooks.py  llm.py  mcp_client.py  memory.py  prompt.py  session.py  subagent.py  tasks.py  teams.py  tools.py  ui.py  worktrees.py
