[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-coding-agent"
version = "0.1.0"
description = "A tiny Python CLI coding agent MVP for learning agent loops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
cca = "mini_coding_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
