[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-coding-agent"
version = "1.0.0"
description = "ForgeCC, a learning-oriented Python coding agent inspired by Claude Code from scratch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "rich>=13.0.0",
]

[project.scripts]
cca = "mini_coding_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
